--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       </nav>
       <div class="follow">
         <a
-          href="https://instagram.com/sania__250508?igshid=ZGUzMzM3NWJiOQ== "
+          href=".... "
           class="fab fa-instagram"
         ></a>
         <a
-          href="https://www.linkedin.com/in/sania-pimple-a5564226b"
+          href="..."
           class="fab fa-linkedin"
         ></a>
-        <a href="https://github.com/Sania-52" class="fab fa-github"></a>
+        <a href="...." class="fab fa-github"></a>
       </div>
     </header>
 
@@ -60,7 +60,7 @@
         </div>
         <div class="content">
           <h3>
-            &#9733; My Name is <span>Sania Pimple</span> and <br />
+            My Name is <span>Sania Pimple</span> and <br />
             I am a <span>Front-end Developer</span>
           </h3>
           <p>
@@ -81,10 +81,7 @@
               </p>
               <p>
                 <b><span>Skills: </span></b> <br />1.HTML <br />2.CSS
-                <br />3.Python <br />4.JavaScript<br />
-                5.ReactJS <br />
-                6.WordPress <br />
-                7.Shopify WebDev
+                <br />3.Python <br />4.JavaScript<br>
               </p>
             </div>
             <div class="box">
@@ -92,7 +89,7 @@
                 <b><span>Phone: </span></b>+91 12345 67890
               </p>
               <p>
-                <b><span>Email: </span></b> saniapimple@gmail.com
+                <b><span>Email: </span></b> abc@gmail.com
               </p>
               <p>
                 <b><span>Address: </span></b> Mumbai
@@ -132,7 +129,7 @@
         <div class="icons">
           <i class="fas fa-envelope"></i>
           <h3>Email Me</h3>
-          <p>saniapimple@gmail.com</p>
+          <p>abc@gmail.com</p>
         </div>
 
         <div class="icons">
